--- a/src/Components/CookieClicker.module.css
+++ b/src/Components/CookieClicker.module.css
@@ -1,6 +1,8 @@
 .CookieContainer {
   align-items: center;
   margin: 0px 2px 0px 2px;
+  border: solid grey 2px;
+  background-color: wheat;
 }
 
 .CookieCounter {
